<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:ems="10"
        android:hint="@string/strCurrencyName"
        android:inputType="textCapSentences"
        android:padding="0dp"
        android:paddingBottom="0dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/strCurrencyShortName"
        android:inputType="textCapCharacters"
        android:padding="0dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp" />

    <Button
        android:id="@+id/button1"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strOk" />

</LinearLayout>
